Fix hero image height on mobile

--- a/static/assets/css/landing.css
+++ b/static/assets/css/landing.css
@@ -75,7 +75,7 @@ h2 {
   object-fit: cover;
   object-position: top;
   width: 300px;
-  height: 200px;
+  height: 135%;
   position: absolute;
   bottom: 0px;
   left: calc(50% - 150px);
@@ -119,7 +119,7 @@ h2 {
     font-size: 3em;
   }
   .hero-svg img {
-    height: 280px;
+    height: 300px;
   }
   .hero-row {
     margin-left: 40px;
